--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,9 @@
 /*Style the body and add a background texture*/
 body {
-margin: 0;
-font-family: sans-serif;
-font-size: 11px;
-background: url(back_text/creampaper.png) repeat 0 0;
+	margin: 0;
+	font-family: sans-serif;
+	font-size: 11px;
+	background: url(back_text/creampaper.png) repeat 0 0;
 }
 
 circle{
@@ -67,21 +67,75 @@ p {
 	padding-left: 140px;
 }
 
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
+.tablinks {
+  text-decoration: none;
+  font: 16px sans-serif;
+}
+
 
 /*Formats the various svgs*/
 .svgs {
 	text-align: center;
 }
 
+/*Formats the dropdown to select a particular statistic. Not used on all pages.*/
+.stat_dropdown {
+	display: block;
+	color: #000000;
+	background: #DCDCDC;
+}
+
+.stat_dropdown:hover {
+	border-color: #888;
+}
 
 /*Formats the checkboxes to select years and stat type*/
 .myCheckbox {
-  font-size: 20px;
+	color: #DCDCDC;
+	font-size: 20px;
 }
 
 div.myCheckboxText {
-  font-size: 16px;
+	font-size: 16px;
 }
+
+
 
 /*Formats the text pop_ups that display on hovering*/
 div.hover_text {	
@@ -100,7 +154,7 @@ div.hover_text {
 /*Formats the choice boxes that allowing toggling between stat type and years */
 div.stat_toggle {
 	position: fixed;
-	background:#00FF7F;
+	background:#C0C0C0;
 	bottom: 20px;
 	left: 20px;
 	border: 3px solid #000000;
