--- a/sports50web/templates/passing_zones.html
+++ b/sports50web/templates/passing_zones.html
@@ -2,80 +2,85 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Passing Zones</title>
 
-{{ script | safe }}
+  <head>
+    <meta charset="utf-8">
+    <title>Passing Zones</title>
+    {{ script | safe }}
+  </head>
 
-</head>
+  <!-- Import in the style sheet -->
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" >
 
-<body>
+  <body>
 
-<style>
+    <!-- Load the data on complete and incomplete pass attempts -->
+    <script type="text/javascript">
+      var passing_zones_complete = JSON.parse('{{ passing_zones_complete | safe }}');
+      var passing_zones_incomplete = JSON.parse('{{ passing_zones_incomplete | safe }}');
+    </script>
 
-.myCheckbox {
-	font-size: 20px;
-}
-
-div.myCheckboxText {
-	font-size: 16px;
-}
-
-</style>
-
-<script type="text/javascript">
-var passing_zones_complete = JSON.parse('{{ passing_zones_complete | safe }}');
-var passing_zones_incomplete = JSON.parse('{{ passing_zones_incomplete | safe }}');
-</script>
-
-<script type="text/javascript" src="{% static 'passing_zones.js' %}"></script>
+    <!-- Load the json file to update the graphic -->
+    <script type="text/javascript" src="{% static 'passing_zones.js' %}"></script>
 
 
-<div style="position: fixed; background:#00FF7F; bottom: 20px; left: 20px; border: 3px solid #000000; padding: 3px;">
-  <small style="color:Black; font-size:20px;">Use these options to toggle between statistics</small>  
-  <br>
-    <div class="myCheckboxText">
-      <input type="checkbox" class="myCheckbox" value="2010" checked> 2010 
-      <input type="checkbox" class="myCheckbox" value="2011" checked> 2011
-      <input type="checkbox" class="myCheckbox" value="2012" checked> 2012 
-      <input type="checkbox" class="myCheckbox" value="2013" checked> 2013
-      <input type="checkbox" class="myCheckbox" value="2014" checked> 2014
-      <input type="checkbox" class="myCheckbox" value="2015" checked> 2015
-      <input type="checkbox" class="myCheckbox" value="2016" checked> 2016
-      <input type="checkbox" class="myCheckbox" value="2017" checked> 2017
+    <div class="stat_toggle">
+      
+      <small style="color:Black; font-size:20px;">Use these options to toggle between statistics</small>  
+      <br>
+
+        <!-- Create checkboxes to allow years to be (de)selected. Set all to default to checked -->
+        <div class="myCheckboxText">
+          <input type="checkbox" class="myCheckbox" value="2010" checked> 2010 
+          <input type="checkbox" class="myCheckbox" value="2011" checked> 2011
+          <input type="checkbox" class="myCheckbox" value="2012" checked> 2012 
+          <input type="checkbox" class="myCheckbox" value="2013" checked> 2013
+          <input type="checkbox" class="myCheckbox" value="2014" checked> 2014
+          <input type="checkbox" class="myCheckbox" value="2015" checked> 2015
+          <input type="checkbox" class="myCheckbox" value="2016" checked> 2016
+          <input type="checkbox" class="myCheckbox" value="2017" checked> 2017
+        </div>
+
     </div>
 
-</div>
+    <h3>Completion Percentage by zone targeted</h3>
+    <p>Hover over different squares of the grid to observe the completion percentage of throws to various areas of the field.</p>
 
-  <h3>Completion Percentage by zone targeted</h3>
-  <p>Hover over different squares of the grid to observe the completion percentage of throws to various areas of the field.</p>
+    <!-- Create a div to hold the svg -->
+    <div id="pass_zones_svg_div" class="svgs">
+      <script type="text/javascript"> 
 
-<div id="svg2" class="svgs">
-  <script type="text/javascript"> 
-    var svg2 = d3.select("#svg2").append("svg").attr("height","720").attr("width","1000").attr("id","second_svg");
-  
-    var div = d3.select("body").append("div")
-      .attr("class", "tooltip").attr("id","second_svg_tooltip")      
-      .style("opacity", 0).style("font", "24px sans-serif");   
+        // Create the svg variable with the given height and width
+        var height = 720
+        var width = 1000
+        var svg2 = d3.select("#pass_zones_svg_div").append("svg").attr("height",height).attr("width",width).attr("id","pass_zones_svg");
+      
 
-    var imgs2 = svg2.selectAll("image").data([0]);
-        imgs2.enter()
-        .append("svg:image")
-        .attr("xlink:href", "{% static 'qb_cartoon.png' %}")
-        .attr("x", "430")
-        .attr("y", "540")
-        .attr("width", "100")
-        .attr("height", "100");        
+        // Create a varibale pop_up which will hold the text that pops up when field sections are hovered over
+        // Takes style from class hover_text.
+        var div = d3.select("#pass_zones_svg_div").append("div")
+          .attr("class", "hover_text").attr("id","passing_zones_pop_up")      
+          .style("opacity", 0).style("font", "24px sans-serif");   
 
-    update()
+        // Attach the image of the QB cartoon
+        var imgs2 = svg2.selectAll("image").data([0]);
+            imgs2.enter()
+            .append("svg:image")
+            .attr("xlink:href", "{% static 'qb_cartoon.png' %}")
+            .attr("x", "430")
+            .attr("y", "540")
+            .attr("width", "100")
+            .attr("height", "100");        
       </script>
-</div>  
+    </div>  
 
-<script type="text/javascript">
-  d3.selectAll(".myCheckbox").on("change",update);
-update();
-</script>
+    <!-- With the page constructed, have the page call the update function from the passing_zones.json file to
+    populate the graphic with data. Also, everytime a year is (de)selected perform the update function again -->
+    <script type="text/javascript">
+      d3.selectAll(".myCheckbox").on("change",update);
+    update();
+    </script>
 
-</body>
+  </body>
+  
 </html>
